<resources>
    <string name="app_name">Despertador</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="btnEnviar">Enviar</string>
    <string name="txtSeleccionar">Seleccionar Contacto</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_user">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Registrarse</string>
    <string name="action_sign_in_rem">Recordar Contraseña</string>
    <string name="welcome">"Bienvenido!"</string>
    <string name="invalid_username">Usuario Invalido</string>
    <string name="invalid_password">Contraseña debe tener mas de 5 caracteres</string>
    <string name="login_failed">"Fallo al ingresar"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="txtAlarma">Seleccionar Alarma</string>
    <string name="txtMensaje">txtMensaje</string>
    <string name="numeroTelefono">numeroTelefono</string>
    <string name="radio">radio</string>
</resources>